# marketing_plan

./: .gitignore  AGENTS.md  README.md  pyproject.toml  task_list_correccion_lean_multimodelo_v1.md
agents/: README.md  analista_metricas.md  auditor_plan_marketing.md  estratega_marketing.md  investigador_marketing.md  orquestador_plan_marketing.md  redactor_marketing.md
docs/: 00_planificacion_mvp_sistema_plan_marketing.md  02_flujo_plan_marketing.md  03_agentes_y_responsabilidades.md  04_skills_y_uso.md  07_estructura_repositorio.md  08_arquitectura_tecnica_inicial.md
docs/00_base_sistema/: 00_planificacion_mvp_sistema_plan_marketing.md  01_alcance_funcional_mvp.md  02_flujo_plan_marketing.md  03_agentes_y_responsabilidades.md  04_skills_y_uso.md  05_gates_y_validaciones.md  06_sistema_cambios_versionado.md  07_estructura_repositorio.md  08_arquitectura_tecnica_inicial.md  09_criterios_de_hecho.md  10_decisiones_finales_pre_codigo.md
docs/01_estandares/: estandar_entregable_final_plan_marketing.md  estandar_funcional_skills_marketing_multimodelo.md  estandar_generador_informe_final.md  estandar_preguntas_y_trazabilidad_multimodelo.md
docs/02_manual_operativo/: documento_maestro_lecciones_aprendidas_y_manual_anti_errores_final.md
docs/hitos/: .gitkeep  (+1 more)
project_template/: project_config.json
scripts/: create_system_copy.py
skills/: README.md
src/: main.py
system/: README.md
tests/: test_auditoria_service.py  test_brief_service.py  test_brief_validator.py  test_data_integrity.py  test_marketing_profile_resolver.py  test_resumen_empresa_service.py
(+96 files in other folders)
