[project]
name = "marketing-plan"
version = "0.1.0"
description = "Sistema agéntico para generar planes de marketing por fases para empresas de servicios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
